--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
     "name": "CoffeeRoaster",
     "description": "Coffee roaster interface",
-    "version": "0.0.1",
-    "dependencies": {},
+    "version": "1.0",
+    "dependencies": {
+        "node-red-contrib-moving-average": "1.3.0",
+        "node-red-contrib-pid": "1.1.7",
+        "node-red-dashboard": "3.0.4",
+        "node-red-node-serialport": "0.15.0"
+    },
     "node-red": {
         "settings": {
             "flowFile": "flow.json",
