--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "CoffeeRoaster",
-    "description": "Coffee roaster interface",
-    "version": "1.0",
+    "description": "Coffee roaster interface V2",
+    "version": "0.1",
     "dependencies": {
         "node-red-contrib-moving-average": "1.3.0",
         "node-red-contrib-pid": "1.1.7",
